# Motion-Analysis-Server

./: .gitignore  build_cpp.sh  build_nuitka.sh  start_server.sh
api/: .gitignore  README.md  build_frontend.sh  cf_tunnel.sh  nginx.conf  requirements.txt  start_server.sh
api/backend/: login_utils.py  start_server.py  utils.py
api/backend/models/: __init__.py  camera.py  recording.py  requests.py
api/backend/routes/: cameras.py  deps.py  recordings.py  reid.py  streaming.py  system.py
api/backend/services/: __init__.py  ai_service.py  audio_recording_utils.py  av_writer.py  camera_service.py  config_manager.py  dashboard_service.py  database_service.py  drawing_utils.py  frame_buffer.py  hls_manager.py  recording_manager.py  streaming_service.py  ws_streaming_manager.py
api/backend/services/ai/: __init__.py  ai_service.py
api/backend/services/recording/: __init__.py  audio_recording_utils.py  av_writer.py  recording_manager.py
api/configs/: system.yaml
api/configs/default/: cameras.yaml  recordings.yaml  system.yaml
api/configs/pc/: cameras.yaml  recordings.yaml  system.yaml
api/configs/pi/: system.yaml
api/fbase/: fbase.js  fbase.py  index.html
api/frontend/: package-lock.json  package.json
api/frontend/public/: index.html
api/frontend/src/: App.css  App.js  api.js  index.css  zonesApi.js
api/telegram/: .env.example  README.md  list_chats.py  package.json  pull.py  receiver.js  receiver.py  requirements.txt  server.py  telethon_session.session
api/webrtc/: AI_INTEGRATION.md  DEPLOYMENT_CHECKLIST.md  GETTING_STARTED.md  PROJECT_OVERVIEW.md  QUICKREF.md  README.md
api/webrtc/cloud/: docker-compose.yml  setup.sh
api/webrtc/pi/: .env.example  ai_stream_server.py  device_agent.py  publisher_ai.py  publisher_raw.py  requirements.txt  setup.sh  webrtc-device.service
api/webrtc/web/: viewer.html
configs/: system.yaml
docker/: Dockerfile  build_docker.sh  core_pkgs.txt  ext_pckgs.txt  extra.sh  install.sh  packages.txt  start_container.sh  util_pkgs.txt
scripts/: audio_input.py  audio_rtsp.py  export_yolox_onnx.sh  ffplay_rtsp.sh  find_onvif.py  play_stream.py  play_stream_ffmpeg.py  ssh_copy.sh  start_stream.py  start_stream.sh  start_stream_ff.py  test_optical_flow.py
src/: eval.py  gui_main.py
src/audioproc/: __init__.py  frequency_intensity_analyzer.py
src/cpp/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  opticalflow.cpp  opticalflow.h  requirements.sh  yolox_detector.cpp  yolox_detector.h
src/gui/: gui_comp.py  gui_framework.py
src/improc/: kalman_filter.py  memory.py  optical_flow.py  optical_flow_legacy.py  osnet_detector.py  person_detection.py  rtmpose_detector.py  scene_analyzer.py  scene_features.py  shared_detectors.py  yolox_detector.py  yolox_detector_cpp.py
src/improc/bytetrack/: CHANGELOG.md  version.txt
src/scripts/: export_onnx.py  export_onnx_deim.py  export_osnet_onnx.py  export_trt_deim.py
src/trackers/: pose_tracker.py  trackers.py
src/trackers/byte_tracker/: byte_tracker.py
(+60 files in other folders)
